# Cashflow_Analysis

./: Cashflow_Analysis_QUESTOR_Uploading2.ipynb  Cashflow_moduled.ipynb  cashflow.py  development.py  main.py  plotting.py  production.py  pyproject.toml  reproduce_issue.py  streamlit_app.py  utils.py  verify_multi.py
.streamlit/: config.toml
data/: new_project_1.json  test_project2.json  test_project_1.json  test_project_3.json
notebook/: Cashflow_Analysis_QUESTOR.ipynb  Cashflow_moduled.ipynb
pages/: 1_Development.py  1_Production.py  2_Development.py  2_Questor_Upload.py  3_Price_Deck.py  3_Questor_Upload.py  4_Cash_Flow.py  5_Cash_Flow.py  5_Multi_Company.py  6_Multi_Company.py  6_Questor_Upload.py
